gccida/c0/recog_16
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/recog_16/src/insn-recog.c:16765:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[0] = x1; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/recog_16/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/recog_16/src/insn-recog.c:16766:13: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
x1n = ( rtx)x0[1]; 
            ^~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/recog_16/src/insn-recog.c:16777:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[1] = x3b; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/recog_16/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/recog_16/src/insn-recog.c:16778:14: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
x2bb = ( rtx)x1n[1]; 
             ^~~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/recog_16/src/insn-recog.c:16784:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[2] = x3d; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/recog_16/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/recog_16/src/insn-recog.c:16786:37: error: use of undeclared identifier 'recog_data_0'
&& ( ( unsigned __int16)*( _DWORD *)recog_data_0.operand[1] != 66 
                                    ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/recog_16/src/insn-recog.c:16787:35: error: use of undeclared identifier 'recog_data_0'
|| ( unsigned __int16)*( _DWORD *)recog_data_0.operand[2] != 66) 
                                  ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/recog_16/src/insn-recog.c:16815:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[1] = x3a; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/recog_16/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/recog_16/src/insn-recog.c:16816:14: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
x2ba = ( rtx)x1n[1]; 
             ^~~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/recog_16/src/insn-recog.c:16822:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[2] = x3c; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/recog_16/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/recog_16/src/insn-recog.c:16824:37: error: use of undeclared identifier 'recog_data_0'
&& ( ( unsigned __int16)*( _DWORD *)recog_data_0.operand[1] != 66 
                                    ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/recog_16/src/insn-recog.c:16825:35: error: use of undeclared identifier 'recog_data_0'
|| ( unsigned __int16)*( _DWORD *)recog_data_0.operand[2] != 66) 
                                  ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/recog_16/src/insn-recog.c:16866:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[0] = x1; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/recog_16/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/recog_16/src/insn-recog.c:16867:27: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
x1d = (  struct rtx_def *)x0[1]; 
                          ^~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/recog_16/src/insn-recog.c:16870:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[1] = x1d; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/recog_16/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/recog_16/src/insn-recog.c:16873:27: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
x1d = (  struct rtx_def *)x0[1]; 
                          ^~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/recog_16/src/insn-recog.c:16882:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[1] = x1d; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/recog_16/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/recog_16/src/insn-recog.c:16895:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[0] = x1; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/recog_16/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/recog_16/src/insn-recog.c:16896:13: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
x1e = ( rtx)x0[1]; 
            ^~~~~
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/recog_16/src/obj/insn-recog.o] Error 1
